Supress pipeline errors during destruction and suspend.

These errors either don't matter or will be recovered naturally the
next time the player is interacted with. We should not count these
towards our failure rates.

BUG=591244
TEST=modified unittests.

Review URL: https://codereview.chromium.org/1753043002

Cr-Commit-Position: refs/heads/master@{#378916}

Former-commit-id: 2ff781da56aa95ad5bb8be9075abf97cf26c82aa